--- a/.github/workflows/pullrequest.yml
+++ b/.github/workflows/pullrequest.yml
@@ -11,7 +11,7 @@ on:
         description: PR Number
         required: true
   pull_request_target:
-    branches: [ master ]
+    branches: [ master, Development ]
 
 jobs:
   build:
