--- a/.github/workflows/pullrequest.yml
+++ b/.github/workflows/pullrequest.yml
@@ -51,13 +51,13 @@ jobs:
       with:
         dropbox_access_token: ${{secrets.DROPBOX_TOKEN}}
         src: CombatOverhaul.zip
-        dest: /Combat Overhaul/${{github.event.pull_request.number}}${{github.event.inputs.PR}}/CombatOverhaul-${{ steps.get-timestamp.outputs.time }}.zip
+        dest: /Combat Overhaul/${{github.event.pull_request.title}}${{github.event.inputs.PR}}/CombatOverhaul-${{ steps.get-timestamp.outputs.time }}.zip
           
     # Create Comment
     - name: Create comment
       uses: peter-evans/create-or-update-comment@v1
       with:
-        issue-number: ${{ github.event.pull_request.title }}${{ github.event.inputs.PR }}
+        issue-number: ${{ github.event.pull_request.number }}${{ github.event.inputs.PR }}
         body: |
           To download the built mod for this PR, visit this link and select the folder matching the ID for this pull request.
           https://www.dropbox.com/sh/91mxs0dlfygfolo/AADVuwZX455cdRNfJbS4QnTma?dl=0
