--- a/.github/workflows/pullrequest.yml
+++ b/.github/workflows/pullrequest.yml
@@ -51,7 +51,7 @@ jobs:
       with:
         dropbox_access_token: ${{secrets.DROPBOX_TOKEN}}
         src: CombatOverhaul.zip
-        dest: /Combat Overhaul/#${{github.event.inputs.PR}}/CombatOverhaul-${{ steps.get-timestamp.outputs.time }}.zip
+        dest: /Combat Overhaul/#${{github.event.pull_request.number}}${{github.event.inputs.PR}}/CombatOverhaul-${{ steps.get-timestamp.outputs.time }}.zip
           
     # Create Comment
     - name: Create comment
