--- a/.github/workflows/pullrequest.yml
+++ b/.github/workflows/pullrequest.yml
@@ -59,7 +59,7 @@ jobs:
       with:
         issue-number: ${{ github.event.pull_request.number }}${{ github.event.inputs.PR }}
         body: |
-          To download the built mod for this PR, visit this link and select the folder matching the ID for this pull request.
+          To download the built mod for this PR, visit this link and select the folder matching the ID for this pull request (New builds are usually at the bottom of the list).
           https://www.dropbox.com/sh/g4sw8yv65vidcs2/AACxj_4SYngi-VQ36bN79Hiya
     
     # Add Label
