--- a/.github/workflows/pullrequest.yml
+++ b/.github/workflows/pullrequest.yml
@@ -31,11 +31,11 @@ jobs:
     - name: Setup Dotnet
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 5.0.x    
+        dotnet-version: 6.0.x    
 
     # Build Mod
     - name: Build Mod
-      run: dotnet build Source --configuration Debug
+      run: dotnet build Source
         
     # Pack Build
     - name: Package Build
