--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -7,9 +7,26 @@ on:
   workflow_dispatch:
 
 jobs:
+  build:
+    name: Build Assembly
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        
+      - name: Setup Dotnet
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: 6.0.x    
+        
+      - name: Build Artifact
+        run: |
+          dotnet build Source
+
   release:
     name: Create Release
     runs-on: ubuntu-latest
+    needs: build
     steps:          
       - name: Get Timestamp
         id: get-timestamp
@@ -30,23 +47,6 @@ jobs:
             Preview build of commit [${{ github.sha }}](https://github.com/${{ github.repository }}/commit/${{ github.sha }})
           draft: false
           prerelease: true
-
-  build:
-    name: Build Assembly
-    runs-on: ubuntu-latest
-    needs: release
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-        
-      - name: Setup Dotnet
-        uses: actions/setup-dotnet@v1
-        with:
-          dotnet-version: 6.0.x    
-        
-      - name: Build Artifact
-        run: |
-          dotnet build Source
         
       - name: Package Mod
         run: |
