--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -20,13 +20,12 @@ jobs:
           dotnet-version: 6.0.x    
         
       - name: Build Artifact
-        run: |
-          dotnet build Source
+        run: dotnet build Source
 
   release:
     name: Create Release
     runs-on: ubuntu-latest
-    needs: build
+    needs: [build]
     steps:          
       - name: Get Timestamp
         id: get-timestamp
@@ -34,6 +33,12 @@ jobs:
         with:
           timeZone: 0
           format: 'YY.MM.DD.HHmm'
+
+      - name: Package Mod
+        run: |
+          mkdir CombatOverhaul
+          cp -r Assemblies About Defs Languages Patches Royalty Ideology Sounds Textures LoadFolders.xml README.md SupportedThirdPartyMods.md CombatOverhaul
+          zip -9 -r CombatOverhaul.zip CombatOverhaul
         
       - name: Create Release
         id: create_release
@@ -47,12 +52,6 @@ jobs:
             Preview build of commit [${{ github.sha }}](https://github.com/${{ github.repository }}/commit/${{ github.sha }})
           draft: false
           prerelease: true
-        
-      - name: Package Mod
-        run: |
-          mkdir CombatOverhaul
-          cp -r Assemblies/ About/ Defs/ Languages/ Patches/ Royalty/ Ideology/ Sounds/ Textures/ LoadFolders.xml README.md SupportedThirdPartyMods.md CombatOverhaul
-          zip -9 -r CombatOverhaul.zip CombatOverhaul
           
       - name: Upload Package
         id: upload-package
