--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -26,7 +26,10 @@ jobs:
     name: Create Release
     runs-on: ubuntu-latest
     needs: [build]
-    steps:          
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        
       - name: Get Timestamp
         id: get-timestamp
         uses: nanzm/get-time-action@v1.1
