Update labeler workflow

--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -2,6 +2,11 @@ name: PR Labeler
 
 on:
   - pull_request_target
+  workflow_dispatch:
+    inputs:
+      PR:
+        description: PR Number
+        required: true
 
 jobs:
   label:
